--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "rxjs-compat": "^6.5.5",
         "sweetalert2": "^9.10.13",
         "tslib": "^1.10.0",
-        "zone.js": "~0.9.1"
+        "zone.js": "~0.9.1",
+        "jquery": "^3.4.1",
+        "jquery-flot": "^0.8.3"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.803.20",
